# RealtimeVoiceChat

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README-PRECOMMIT.md  README.md  entrypoint.sh  install.bat  pyproject.toml  requirements-dev.txt  requirements.txt  scan-secrets.bat  setup-precommit.bat  start_venv.bat
code/: .env.example  alembic.ini  audio_in.py  audio_module.py  colors.py  database.py  llm_module.py  logsetup.py  server.py  speech_pipeline_manager.py  system_prompt.txt  system_prompts.json  text_context.py  text_similarity.py  transcribe.py  turndetect.py  upsample_overlap.py
code/alembic/: README  env.py
code/api/: __init__.py  dependencies.py  models.py
code/api/routes/: __init__.py  auth.py  config.py  health.py  history.py  sessions.py
code/services/: __init__.py  auth_service.py  session_manager.py
code/static/: app.js  index.html
runners/: start-server.bat
wheels/: README.md
