[project]
name = "realtimevoicechat"
version = "0.1.0"
description = "Real-time voice chat application with STT and TTS"
requires-python = ">=3.10"

dependencies = [
    "realtimestt==0.3.104",
    "realtimetts[kokoro,orpheus]==0.5.5",
    "transformers==4.35.2",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "ollama",
    "openai",
    "sqlalchemy>=2.0",
    "asyncpg",
    "aiosqlite",
    "alembic",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "redis[hiredis]",
    "pydantic>=2.0",
    "pydantic-settings",
    "email-validator",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "black>=24.1.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "bandit>=1.7.0",
    "detect-secrets>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.venv
  | venv
  | build
  | dist
  | __pycache__
  | code/static
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["code/static/*"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "code/static"
]

[tool.bandit]
exclude_dirs = ["tests", "test", ".venv", "venv", "code/static"]
skips = ["B101", "B601"]  # Skip assert_used and shell injection checks
